# StarshipAscension

./: .clang-format  .clang_complete  .clangd  .gdbinit  .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md  ask.txt  build.bat  build.ps1  build.sh  compile_commands.json  debug.bat  docking_module.cpp  docking_module.h  file.txt  game  game.cpp  game.h  main.cpp  menu.h  movement.h  player.cpp  player.h  playing_field.cpp  playing_field.h  shields_manager.cpp  shields_manager.h  ship.cpp  ship.h  station.cpp  station.h  vector2d.cpp  vector2d.h  weapons_manager.cpp  weapons_manager.h
include/: Sensor.h  captains_log.hpp  crew_manager.hpp  game.hpp  game_ui.hpp  input_utils.hpp  save_manager.hpp
include/data_models/: Constants.h  Health.h  Inventory.h  Moon.h  Navigation.h  Planet.h  Player.h  Position.h  Score.h  Shields.h
include/game_logic/: Docking.h  Docking.hpp  Engine.h  Game.h  GameObj.h  GameState.h  Missions.h  Movement.h  Player.h  ShieldsManager.h  Shuttlebay.h  Shuttlecraft.h  Spaceship.h  Starbase.h  StarshipAscension.h  Station.h  Weapons.h  WeaponsManager.h
include/ui/: Display.h  Menu.h  PlayingField.h
include/utils/: Serializer.h  Vector2D.h
saves/: captainslog.txt  fleet_status.yml  planet.csv  save_001.json
src/: Game.scala  GameData.cpp  Loaver.scala  Planet.cpp  Serializer.cpp  Spaceship.cpp  StarshipAscension.cpp  captains_log.cpp  crew_manager.cpp  docking_module.cpp  game.cpp  game_ui.cpp  input_utils.cpp  main.cpp  menu.cpp  movement.cpp  planet.cpp  player.cpp  playing_field.cpp  save_manager.cpp  shields_manager.cpp  ship.cpp  station.cpp  vector2d.cpp  weapons_manager.cpp
src/data_models/: Health.cpp  Inventory.cpp  Moon.cpp  Navigation.cpp  Planet.cpp  Player.cpp  Position.cpp  Sensor.cpp  Shields.cpp
src/game_logic/: Docking.cpp  Engine.cpp  Game.cpp  GameObj.cpp  Missions.cpp  Movement.cpp  Player.cpp  ShieldsManager.cpp  Shuttlebay.cpp  Shuttlecraft.cpp  Spaceship.cpp  Starbase.cpp  StarshipAscension.cpp  Station.cpp  Weapons.cpp  WeaponsManager.cpp
src/include/: GameData.h  GameObj.cpp  GameObj.h  Planet.h  Serializer.h  Spaceship.h  StarshipAscension.h  docking_module.h  game.h  main.h  movement.h  planet.h  player.h  playing_field.h  shields_manager.h  ship.h  station.h  vector2d.h  weapons_manager.h
src/ui/: Display.cpp  Menu.cpp  PlayingField.cpp
src/utils/: Serializer.cpp  Vector2D.cpp
